# TrustForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  canonical-vectors.yaml  deny.toml  package.json  tsconfig.json
.github/: pull_request_template.md
.tf/: agent-contract.yaml  daemon.yaml  policy.yaml  threat-model.yaml
conformance/: README.md  binary-format-vectors.yaml  bridge-vectors.yaml  canonical-vectors.yaml  chain-vectors.yaml  cross-language-signature-vectors.yaml  decide-protocol-vectors.yaml  framing-vectors.yaml  guard-vectors.yaml  negative-capability-vectors.yaml  parity.yaml  relay-forwarding-vectors.yaml  session-vectors.yaml  signature-vectors.yaml  tls-exporter-vectors.yaml  trust-overlay-vectors.yaml
crates/adapters/actix-web/: Cargo.toml  README.md
crates/adapters/actix-web/src/: lib.rs
crates/adapters/axum/: Cargo.toml  README.md
crates/adapters/axum/src/: lib.rs
crates/adapters/hyper/: Cargo.toml  README.md
crates/adapters/hyper/src/: lib.rs
crates/adapters/poem/: Cargo.toml  README.md
crates/adapters/poem/src/: lib.rs
crates/adapters/rocket/: Cargo.toml  README.md
crates/adapters/rocket/src/: lib.rs
crates/adapters/salvo/: Cargo.toml  README.md
crates/adapters/salvo/src/: lib.rs
crates/adapters/tf-decide-client/: Cargo.toml  README.md
crates/adapters/tf-decide-client/src/: lib.rs
crates/adapters/tf-decide-client/tests/: client.rs
crates/adapters/tonic/: Cargo.toml  README.md
crates/adapters/tonic/src/: lib.rs
crates/adapters/warp/: Cargo.toml  README.md
crates/adapters/warp/src/: lib.rs
crates/bridges/tf-bridge-aws/: Cargo.toml  README.md
crates/bridges/tf-bridge-aws/src/: lib.rs
crates/bridges/tf-bridge-aws/tests/: aws_sts.rs
crates/bridges/tf-bridge-azure/: Cargo.toml  README.md
crates/bridges/tf-bridge-azure/src/: lib.rs
crates/bridges/tf-bridge-azure/tests/: azure_jwt.rs
crates/bridges/tf-bridge-doppler/: Cargo.toml  README.md
crates/bridges/tf-bridge-doppler/src/: lib.rs
crates/bridges/tf-bridge-doppler/tests/: doppler.rs
crates/bridges/tf-bridge-gcp/: Cargo.toml  README.md
crates/bridges/tf-bridge-gcp/src/: lib.rs
crates/bridges/tf-bridge-gcp/tests/: gcp_idtoken.rs
crates/bridges/tf-bridge-vault/: Cargo.toml  README.md
crates/bridges/tf-bridge-vault/src/: lib.rs
crates/bridges/tf-bridge-vault/tests/: vault.rs
crates/tf-cedar/: Cargo.toml  README.md
crates/tf-cedar/src/: lib.rs
crates/tf-cedar/tests/: cedar.rs
crates/tf-code-helper-example/: Cargo.toml  README.md
crates/tf-code-helper-example/src/: lib.rs
crates/tf-code-helper-example/tests/: round_trip.rs
crates/tf-core-no-std/: Cargo.toml  README.md
crates/tf-core-no-std/src/: lib.rs  nonce_cache.rs  orl.rs  packet.rs  relay.rs
crates/tf-core-no-std/tests/: no_std_compile.rs
crates/tf-core-wasm/: Cargo.toml  README.md  build.sh
crates/tf-core-wasm/src/: lib.rs
crates/tf-core-wasm/tests/: wasm.rs
crates/tf-embedded-hal/: Cargo.toml  README.md
crates/tf-embedded-hal/src/: adapters.rs  lib.rs
crates/tf-embedded-hal/tests/: mock_smoke.rs
crates/tf-otel/: Cargo.toml  README.md
crates/tf-otel/src/: lib.rs
crates/tf-otel/tests/: otel_init.rs
crates/tf-proxy/: Cargo.toml  README.md
crates/tf-proxy/src/: lib.rs  main.rs
crates/tf-proxy/tests/: proxy.rs
crates/tf-rego/: Cargo.toml  README.md
crates/tf-rego/src/: lib.rs
crates/tf-rego/tests/: rego.rs
crates/tf-revoke-redis/: Cargo.toml  README.md
crates/tf-revoke-redis/src/: lib.rs
crates/tf-revoke-redis/tests/: redis_cache.rs
crates/tf-session/: Cargo.toml  README.md
crates/tf-session/src/: lib.rs
crates/tf-session/tests/: carrier.rs
crates/tf-store-file/: Cargo.toml  README.md
crates/tf-store-file/src/: lib.rs
crates/tf-store-file/tests/: file_store.rs
crates/tf-store-postgres/: Cargo.toml  README.md
crates/tf-store-postgres/migrations/: 0001_init.sql
crates/tf-store-postgres/src/: lib.rs
crates/tf-store-postgres/tests/: postgres_store.rs
crates/tf-store-sqlite/: Cargo.toml  README.md
crates/tf-store-sqlite/src/: lib.rs
crates/tf-store-sqlite/tests/: sqlite_store.rs
crates/tf-transport/: Cargo.toml  README.md
crates/tf-transport/src/: lib.rs
crates/tf-types/: Cargo.toml  README.md
crates/tf-types/src/: actor_id.rs  approval.rs  binary_format.rs  bridge_a2a.rs  bridge_did.rs  bridge_gnap.rs  bridge_grpc.rs  bridge_matrix.rs  bridge_mcp.rs  bridge_oauth.rs  bridge_service_mesh.rs  bridge_spiffe.rs  bridge_tls.rs  bridge_webauthn.rs  bridge_webhook.rs  bridges.rs  bridges_registry.rs  bundle.rs  canonical.rs  capability.rs  cbor.rs  chain.rs  constrained.rs  crypto.rs  crypto_pq.rs  delegation.rs  encoding.rs  envelope.rs  evidence.rs  expiration.rs  federation.rs  format.rs  glob.rs  guard.rs  instance_id.rs  jws.rs  lib.rs  offline_approval.rs  packet.rs  permission.rs  (+18 more)
crates/tf-types/tests/: approval.rs  b7_vault.rs  b8_glob.rs  binary_format_parity.rs  bridge_gnap.rs  bridge_mcp.rs  bridge_oauth.rs  bridge_service_mesh.rs  bridge_tls.rs  bridge_tls_extensions.rs  bridge_webauthn.rs  bridges.rs  bridges_registry.rs  bridges_sprint5.rs  bundle.rs  canonical_vectors.rs  chain_vectors.rs  cross_language_signature_vectors.rs  evidence.rs  federation.rs  fixture_round_trip.rs  framing_vectors.rs  guard.rs  hello_i_supported_suites.rs  hybrid_handshake.rs  negative_capability.rs  offline_approval.rs  packet.rs  parity.rs  per_actor_authority.rs  permission.rs  plugin.rs  policy_engine.rs  profile.rs  quorum.rs  relay.rs  rpc.rs  rpc_kinds.rs  semantics.rs  session.rs  (+9 more)
docs/: ai-implementation.md  ai-integration.md  cargo-trusted-publishing.md  concept.md  dependency-audit.md  dependency-replacement-roadmap.md  dependency-replacement-task-list.md  native-support-matrix.md  npm-trusted-publishing.md  repo-structure.md
examples/: README.md
plugins/: README.md
schemas/: README.md  _common.schema.json  actions.schema.json  actor-identity.schema.json  agent-contract.schema.json  approval-request.schema.json  (+32 more)
(+1156 files in other folders)
