[workspace]
resolver = "2"
members = ["crates/tf-types", "crates/tf-code-helper-example"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NuGit-Tech/TrustForge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
proptest = "1"
