[workspace]
resolver = "2"
members = [
    "crates/tf-types",
    "crates/tf-session",
    "crates/tf-code-helper-example",
    "crates/tf-core-no-std",
    "crates/tf-embedded-hal",
    "crates/tf-cedar",
    "crates/tf-rego",
    "crates/tf-proxy",
    "crates/tf-core-wasm",
    "crates/tf-store-sqlite",
    "crates/tf-store-postgres",
    "crates/tf-store-mysql",
    "crates/tf-revoke-redis",
    "crates/adapters/tf-decide-client",
    "crates/adapters/axum",
    "crates/adapters/tonic",
    "crates/adapters/actix-web",
    "crates/adapters/rocket",
    "crates/adapters/warp",
    "crates/adapters/poem",
    "crates/adapters/salvo",
    "crates/adapters/hyper",
    "crates/tf-otel",
    "crates/bridges/tf-bridge-aws",
    "crates/bridges/tf-bridge-gcp",
    "crates/bridges/tf-bridge-azure",
    "crates/bridges/tf-bridge-vault",
    "crates/bridges/tf-bridge-doppler",
    "tools/native/prometheus-exporter",
]

# Embedded firmware example projects (K2-K9) live under `crates/embedded/`
# and target bare-metal MCUs (Cortex-M, Xtensa, RISC-V, AVR). They use
# board-specific HALs and link against linker scripts; they cannot
# compile for the host triple, so we exclude them from the workspace.
# Each project is a standalone Cargo bin crate with its own Cargo.lock,
# .cargo/config.toml, and memory.x (where appropriate). Build them with
# the per-target instructions in each crate's README.md.
exclude = [
    "crates/embedded/tf-stm32wl-lora",
    "crates/embedded/tf-esp32-wifi",
    "crates/embedded/tf-rp2040-picow",
    "crates/embedded/tf-nrf52-ble",
    "crates/embedded/tf-esp32c3-uart",
    "crates/embedded/tf-avr-atmega328",
    "crates/embedded/tf-bootloader-example",
]

[workspace.package]
readme = "README.md"
description = "TrustForge: open-source trust fabric for AI-native software, devices, and verifiable action."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/KodyDennon/TrustForge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
proptest = "1"
