[package]
readme.workspace = true
name = "tf-cedar"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge Cedar policy engine adapter."

[dependencies]
cedar-policy = "4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tf-types = { version = "0.1.1", path = "../tf-types" }
