[package]
readme = "README.md"
name = "tf-cedar"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge policy engine adapter for AWS Cedar. Evaluate complex authorization policies locally against TrustForge capabilities."

[dependencies]
cedar-policy = "4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tf-types = { version = "0.1.9", path = "../tf-types" }
