[package]
name = "tf-code-helper-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Downstream consumer that compiles the generated ProofRPC Rust output for code-helper.tfrpc.yaml."

[dependencies]
tf-types = { path = "../tf-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
