[package]
readme = "README.md"
name = "tf-core-no-std"
version = "0.1.9"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge core protocol implemented for #![no_std] environments. Optimized for embedded systems, WebAssembly, and constrained targets."

[features]
default = ["alloc"]
# `alloc` enables BTreeMap/Vec/String-backed paths.
alloc = []
# `std` is a superset of `alloc` and turns on a few host-only conveniences.
std = ["alloc"]

[dependencies]
ed25519-compact = { version = "2", default-features = false, features = ["self-verify"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["heapless"] }
sha2 = { version = "0.10", default-features = false }
heapless = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[dev-dependencies]
# Tests run on the host with default features; the crate also builds clean
# with `--no-default-features` to prove the no_alloc path.
