[package]
name = "tf-core-wasm"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge core surface compiled to wasm32 for in-process TS/JS adapters."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tf-types = { path = "../tf-types" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
