[package]
readme = "README.md"
name = "tf-core-wasm"
version = "0.1.7"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge core surface compiled to WebAssembly (wasm32) for high-performance, in-process execution within browser and Node.js environments."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tf-types = { version = "0.1.7", path = "../tf-types" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
