[package]
readme.workspace = true
name = "tf-otel"
version = "0.1.4"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge OpenTelemetry integration. Standardized OTLP tracing, spans, and metrics for auditing the entire zero-trust lifecycle."

[dependencies]
# Core OpenTelemetry SDK + OTLP exporter. We pin the 0.27.x line because
# tracing-opentelemetry 0.28 is the matching pair (it consumes the
# opentelemetry 0.27 traits). When we move to 0.31+ we must bump
# tracing-opentelemetry to 0.32+ in lockstep.
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "http-proto", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.27", features = ["trace", "metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = { version = "0.28", default-features = false, features = ["tracing-log", "metrics"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
thiserror = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
