[package]
name = "tf-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tf-otel = { path = "../tf-otel" }

[lib]
name = "tf_proxy"
path = "src/lib.rs"

[[bin]]
name = "tf-proxy"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
