[package]
description = "TrustForge module for proxy. Part of the open-source trust fabric for AI-native software."
readme.workspace = true
name = "tf-proxy"
version = "0.1.1"
edition = "2021"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tf-otel = { version = "0.1.1", path = "../tf-otel" }

[lib]
name = "tf_proxy"
path = "src/lib.rs"

[[bin]]
name = "tf-proxy"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
