[package]
name = "tf-rego"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge Rego (OPA) policy engine adapter."

[dependencies]
regorus = { version = "0.9", default-features = false, features = ["std", "regex", "base64", "base64url", "hex", "graph", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tf-types = { version = "0.1.0", path = "../tf-types" }
