[package]
readme = "README.md"
name = "tf-rego"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge policy engine adapter for OPA Rego. Evaluate dynamic, fine-grained policies using Open Policy Agent semantics."

[dependencies]
regorus = { version = "0.9", default-features = false, features = ["std", "regex", "base64", "base64url", "hex", "graph", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tf-types = { version = "0.1.6", path = "../tf-types" }
