[package]
readme.workspace = true
name = "tf-revoke-redis"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge Redis-backed revocation cache (RevocationCache trait only)."

[dependencies]
redis = { version = "0.27", default-features = false }
thiserror = "1"
tf-types = { version = "0.1.1", path = "../tf-types" }
