[package]
readme = "README.md"
name = "tf-revoke-redis"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge revocation cache backed by Redis. High-performance, distributed invalidation of capabilities and active sessions."

[dependencies]
redis = { version = "0.27", default-features = false }
thiserror = "1"
tf-types = { version = "0.1.9", path = "../tf-types" }
