[package]
readme = "README.md"
name = "tf-session"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge session carrier driver. Implements the secure handshake, AEAD framing, and perfect forward secrecy for network sessions."

[dependencies]
tf-types = { version = "0.1.6", path = "../tf-types" }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1"
futures = "0.3"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
