[package]
readme = "README.md"
name = "tf-store-file"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge first-party file-backed store for proof ledger, revocations, and evidence bundles."

[dependencies]
serde_json = { workspace = true }
tf-types = { version = "0.1.9", path = "../tf-types" }
