[package]
name = "tf-store-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge PostgreSQL backend (proof ledger, revocation cache, evidence archive)."

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "any"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tf-types = { path = "../tf-types" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
