[package]
readme = "README.md"
name = "tf-store-postgres"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge database backend for Postgres. High-performance storage driver for the TrustForge proof ledger, revocation cache, and evidence archive."

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "any"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tf-types = { version = "0.1.5", path = "../tf-types" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
