[package]
name = "tf-store-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge SQLite backend (proof ledger, revocation cache, evidence archive)."

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tf-types = { path = "../tf-types" }

[dev-dependencies]
tempfile = "3"
