[package]
readme.workspace = true
name = "tf-store-sqlite"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge database backend for Sqlite. High-performance storage driver for the TrustForge proof ledger, revocation cache, and evidence archive."

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tf-types = { version = "0.1.4", path = "../tf-types" }

[dev-dependencies]
tempfile = "3"
