[package]
name = "tf-types"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge typed schema bindings and semantic core."

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
fuzz = ["dep:proptest"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
thiserror = "1"
unicode-normalization = "0.1"
regex = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
blake3 = "1"
base64 = "0.22"

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = { version = "0.18", default-features = false }
