[package]
readme.workspace = true
name = "tf-types"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core semantic types, traits, and schemas powering the TrustForge protocol."

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
fuzz = ["dep:proptest"]
http-anchors = ["dep:ureq"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
thiserror = "1"
unicode-normalization = "0.1"
regex = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"
sha2 = "0.10"
blake3 = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
chacha20poly1305 = "0.10"
flate2 = "1"
hmac = "0.12"
sha1 = "0.10"
argon2 = "0.5"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
x509-parser = { version = "0.16", features = ["verify"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
fips204 = "0.4"
wasmtime = { version = "43.0.1", default-features = false, features = ["cranelift", "runtime"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
jsonschema = { version = "0.18", default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tempfile = "3"
which = "6"
rcgen = "0.13"
time = "0.3"
