[package]
readme = "README.md"
name = "tf-actix-web"
version = "0.1.8"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Actix web. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Actix web servers."

[dependencies]
tf-decide-client = { version = "0.1.8", path = "../tf-decide-client" }
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-service = "2"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-rt = "2"
