[package]
readme.workspace = true
name = "tf-axum"
version = "0.1.4"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Axum. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Axum servers."

[dependencies]
tf-decide-client = { version = "0.1.4", path = "../tf-decide-client" }
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
tracing = "0.1"
tf-otel = { version = "0.1.4", path = "../../tf-otel" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
