[package]
readme.workspace = true
name = "tf-poem"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Poem. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Poem servers."

[lib]
path = "src/lib.rs"
