[package]
name = "tf-rocket"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge Rocket fairing that consults tf-daemon /v1/decide."

[dependencies]
tf-decide-client = { version = "0.1.0", path = "../tf-decide-client" }
rocket = { version = "0.5", default-features = false, features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rocket = { version = "0.5", default-features = false, features = ["json"] }
