[package]
readme = "README.md"
name = "tf-salvo"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Salvo. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Salvo servers."

[lib]
path = "src/lib.rs"
