[package]
name = "tf-decide-client"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Shared HTTP client used by tf-* framework adapters to call tf-daemon /v1/decide."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
