[package]
readme = "README.md"
name = "tf-decide-client"
version = "0.1.6"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Decide client. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Decide client servers."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tf-transport = { version = "0.1.6", path = "../../tf-transport" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
