[package]
readme = "README.md"
name = "tf-tonic"
version = "0.1.5"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Tonic. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Tonic servers."

[dependencies]
tf-decide-client = { version = "0.1.5", path = "../tf-decide-client" }
tonic = "0.12"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
http = "1"
tracing = "0.1"
tf-otel = { version = "0.1.5", path = "../../tf-otel" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde_json = "1"
