[package]
readme = "README.md"
name = "tf-warp"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge middleware for Warp. Provides drop-in zero-trust request verification, capability delegation, and policy enforcement for Warp servers."

[lib]
path = "src/lib.rs"
