[package]
readme.workspace = true
name = "tf-bridge-aws"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge bridge for AWS IAM — verifies SigV4 callers via STS GetCallerIdentity, translates AssumeRole credentials and IAM policies into TrustForge actors and capabilities."

[dependencies]
tf-types = { version = "0.1.1", path = "../../tf-types" }
aws-sdk-sts = "1"
aws-config = "1"
aws-smithy-runtime = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
aws-credential-types = "1"
aws-types = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
http = "1"
url = "2"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
