[package]
readme = "README.md"
name = "tf-bridge-doppler"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge identity bridge for DOPPLER. Translate DOPPLER credentials, roles, and policies into cryptographic TrustForge actors and capabilities."

[dependencies]
tf-types = { version = "0.1.6", path = "../../tf-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
