[package]
name = "tf-bridge-gcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge bridge for GCP IAM — verifies Google ID tokens via Google's JWKS, translates service accounts and IAM roles into TrustForge actors and capabilities."

[dependencies]
tf-types = { version = "0.1.0", path = "../../tf-types" }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
base64 = "0.22"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
