[package]
readme = "README.md"
name = "tf-bridge-gcp"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge identity bridge for GCP. Translate GCP credentials, roles, and policies into cryptographic TrustForge actors and capabilities."

[dependencies]
tf-types = { version = "0.1.5", path = "../../tf-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
