[package]
readme.workspace = true
name = "tf-bridge-vault"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge bridge for HashiCorp Vault — translates Vault tokens (via auth/token/lookup-self) into TrustForge actors and projects secret paths into capability targets."

[dependencies]
tf-types = { version = "0.1.1", path = "../../tf-types" }
vaultrs = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
