[package]
readme = "README.md"
name = "tf-bridge-vault"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TrustForge identity bridge for VAULT. Translate VAULT credentials, roles, and policies into cryptographic TrustForge actors and capabilities."

[dependencies]
tf-types = { version = "0.1.7", path = "../../tf-types" }
vaultrs = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = { workspace = true }
